src/test/deca/context/invalid/superclass_inexistante.deca
// Description :
// extends une class inconnue (SuperLigaClub n'existe pas).
//
// Resultats :
// echec superclasse inconnue.
class BarcaB extends SuperLigaClub {
}
{
    println("okkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk");
}
